--- a/src/main/resources/templates/EmployeeLogin/damageReport.html
+++ b/src/main/resources/templates/EmployeeLogin/damageReport.html
@@ -22,7 +22,7 @@
     </div>
 
     <main class="main-content">
-        <section class="dashboard">
+        <section class="damageReport-dashboard">
             <h1>Skaderapporter</h1>
             <p>Herunder ses biler der mangler skaderapport.</p>
 
