--- a/src/main/resources/templates/EmployeeLogin/dashboard.html
+++ b/src/main/resources/templates/EmployeeLogin/dashboard.html
@@ -29,8 +29,8 @@
 
         <section class="dashboard">
             <div class="card">
-                <h3>Se Alle Biler Og Tilføj Bil</h3>
-                <a th:href="@{/EmployeeLogin/viewAllCarsAndAddCar}" class="btn-link">Se Alle Biler Og Tilføj Bil</a>
+                <h3>Tilføj Bil</h3>
+                <a th:href="@{/EmployeeLogin/viewAllCarsAndAddCar}" class="btn-link">Tilføj Bil</a>
             </div>
 
             <div class="card">
