--- a/src/main/resources/templates/EmployeeLogin/viewAllCarsAndAddCar.html
+++ b/src/main/resources/templates/EmployeeLogin/viewAllCarsAndAddCar.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="/style.css">
 </head>
 <body>
-RASMUS I MONGOL
 <div class="layout">
 
   <div class="header">
@@ -58,6 +57,9 @@ RASMUS I MONGOL
 
           <label>Pris:</label>
           <input type="number" step="0.01" name="price" required><br>
+
+          <label>URL til billede:</label>
+          <input type="url" name="image" required><br>
 
           <div class="button-group">
             <button type="submit" class="submit">Gem Bil</button>
