statistikside done. need html+css

--- a/src/main/resources/templates/EmployeeLogin/dashboard.html
+++ b/src/main/resources/templates/EmployeeLogin/dashboard.html
@@ -50,7 +50,7 @@
 
             <div class="card">
                 <h3>KPI Og Statisiker</h3>
-                <a th:href="@{/EmployeeLogin/buyCars}" class="btn-link">Køb Bil</a>
+                <a th:href="@{/EmployeeLogin/statistics}" class="btn-link">KPI- og statistikker</a>
             </div>
 
             <div class="card">
