Ændring af return metoder i controllers og navnene på html siderne

--- a/src/main/resources/templates/addCars.html
+++ b/src/main/resources/templates/addCars.html
@@ -16,7 +16,7 @@
     </div>
     <h3>Medarbejderportal</h3>
     <nav>
-      <a th:href="@{/}" class="back-btn">Log ud</a>
+      <a th:href="@{/static}" class="back-btn">Log ud</a>
     </nav>
   </div>
 
