--- a/src/main/resources/templates/damageReportHistory.html
+++ b/src/main/resources/templates/damageReportHistory.html
@@ -11,7 +11,7 @@
 <div class="layout">
     <div class="header">
         <div class="logo">
-            <a th:href="@{/EmployeeLogin/dashboard}"><img src="/img/Logo.png" alt="BILABONNEMENT Logo"></a>
+            <a th:href="@{/dashboard}"><img src="/img/Logo.png" alt="BILABONNEMENT Logo"></a>
         </div>
         <h3>Medarbejderportal</h3>
         <nav>
@@ -57,7 +57,7 @@
 
                 </table>
             </div>
-            <a th:href="@{/EmployeeLogin/damageReport}" class="btn-link">Tilbage til Skaderapporter</a>
+            <a th:href="@{/damageReport}" class="btn-link">Tilbage til Skaderapporter</a>
         </section>
     </main>
 
