--- a/src/main/resources/templates/carOverview.html
+++ b/src/main/resources/templates/carOverview.html
@@ -12,7 +12,7 @@
 <div class="layout">
     <div class="header">
         <div class="logo">
-            <a th:href="@{/EmployeeLogin/dashboard}">
+            <a th:href="@{/dashboard}">
                 <img src="/img/Logo.png" alt="BILABONNEMENT Logo">
             </a>
         </div>
