--- a/src/main/resources/templates/damageReport.html
+++ b/src/main/resources/templates/damageReport.html
@@ -13,7 +13,7 @@
 
     <div class="header">
         <div class="logo">
-            <a th:href="@{/EmployeeLogin/dashboard}"><img src="/img/Logo.png" alt="BILABONNEMENT Logo"></a>
+            <a th:href="@{/dashboard}"><img src="/img/Logo.png" alt="BILABONNEMENT Logo"></a>
         </div>
         <h3>Medarbejderportal</h3>
         <nav>
@@ -41,14 +41,14 @@
                     <td th:text="${car.model}">Modelnavn</td>
                     <td th:text="${car.vehicleNumber}">XX12345</td>
                     <td>
-                        <a th:href="@{/EmployeeLogin/damageReportFill/{id}(id=${car.carId})}" class="btn-link">Udfyld Skaderapport</a>
+                        <a th:href="@{/damageReportFill/{id}(id=${car.carId})}" class="btn-link">Udfyld Skaderapport</a>
                     </td>
                 </tr>
                 </tbody>
             </table>
 
             <div style="margin-top: 2rem;">
-                <a th:href="@{/EmployeeLogin/damageReportHistory}" class="btn-link">Se tidligere skaderapporter</a>
+                <a th:href="@{/damageReportHistory}" class="btn-link">Se tidligere skaderapporter</a>
             </div>
         </section>
     </main>
