--- a/src/main/resources/templates/damageReportDone.html
+++ b/src/main/resources/templates/damageReportDone.html
@@ -12,7 +12,7 @@
 
     <div class="header">
         <div class="logo">
-            <a th:href="@{/EmployeeLogin/dashboard}"><img src="/img/Logo.png" alt="BILABONNEMENT Logo"></a>
+            <a th:href="@{/dashboard}"><img src="/img/Logo.png" alt="BILABONNEMENT Logo"></a>
         </div>
         <h3>Medarbejderportal</h3>
         <nav>
@@ -26,7 +26,7 @@
             <p>Din skaderapport er blevet gemt korrekt.</p>
 
             <div style="margin-top: 2rem;">
-                <a th:href="@{/EmployeeLogin/damageReport}" class="btn-link">Gå tilbage til skaderapporter</a>
+                <a th:href="@{/damageReport}" class="btn-link">Gå tilbage til skaderapporter</a>
             </div>
         </section>
     </main>
