--- a/src/main/resources/templates/employeeOverview.html
+++ b/src/main/resources/templates/employeeOverview.html
@@ -12,7 +12,7 @@
 <div class="layout">
     <div class="header">
         <div class="logo">
-            <a th:href="@{/EmployeeLogin/dashboard}"><img src="/img/Logo.png" alt="BILABONNEMENT Logo"></a>
+            <a th:href="@{/dashboard}"><img src="/img/Logo.png" alt="BILABONNEMENT Logo"></a>
         </div>
         <h3>Medarbejderportal</h3>
         <nav>
