--- a/src/main/resources/templates/htmlTemplate.html
+++ b/src/main/resources/templates/htmlTemplate.html
@@ -16,7 +16,7 @@
     </div>
 
     <nav>
-        <a th:href="@{/static}" class="back-btn">Tilbage</a>
+        <a th:href="@{/}" class="back-btn">Tilbage</a>
       </nav>
   </div>
 
