admin function added + bk buttons

--- a/src/main/resources/templates/carOverview.html
+++ b/src/main/resources/templates/carOverview.html
@@ -18,6 +18,7 @@
         </div>
         <h3>Medarbejderportal</h3>
         <nav>
+            <a th:href="@{/dashboard}" class="back-btn">Tilbage</a>
             <a th:href="@{/}" class="back-btn">Log ud</a>
         </nav>
     </div>
