--- a/src/main/resources/templates/addCars.html
+++ b/src/main/resources/templates/addCars.html
@@ -16,6 +16,7 @@
     </div>
     <h3>Medarbejderportal</h3>
     <nav>
+      <a th:href="@{/dashboard}" class="back-btn">Tilbage</a>
       <a th:href="@{/}" class="back-btn">Log ud</a>
     </nav>
   </div>
