--- a/src/main/resources/templates/damageReport.html
+++ b/src/main/resources/templates/damageReport.html
@@ -17,6 +17,7 @@
         </div>
         <h3>Medarbejderportal</h3>
         <nav>
+            <a th:href="@{/dashboard}" class="back-btn">Tilbage</a>
             <a th:href="@{/}" class="back-btn">Log ud</a>
         </nav>
     </div>
