--- a/src/main/resources/templates/damageReportHistory.html
+++ b/src/main/resources/templates/damageReportHistory.html
@@ -15,6 +15,7 @@
         </div>
         <h3>Medarbejderportal</h3>
         <nav>
+            <a th:href="@{/damageReport}" class="back-btn">Tilbage</a>
             <a th:href="@{/}" class="back-btn">Log ud</a>
         </nav>
     </div>
