--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,8 @@
 <div class="header">
     <div class="logo">
         <img src="/img/Logo.png" alt="BILABONNEMENT Logo">
-    </div>    <nav>
+    </div>
+    <nav>
         <a href="https://bilabonnement.dk" class="back-btn">Gå til Bilabonnement.dk</a>
     </nav>
 </div>
@@ -42,33 +43,12 @@
                 </form>
             </div>
         </div>
-
-        <div class="section">
-            <h2>Opret bruger</h2>
-            <div>
-                <p th:if="${registerError}" th:text="${registerError}" style="color: red;"></p>
-                <form th:action="@{/register}" method="post">
-                    <label for="signup-employee-id">EmployeeID</label>
-                    <input type="number" id="signup-employee-id" name="employeeId" placeholder="Indtast EmployeeID" required>
-
-                    <label for="signup-full-name">Fulde navn</label>
-                    <input type="text" id="signup-full-name" name="fullName" placeholder="Indtast fulde navn" required>
-
-                    <label for="signup-username">Brugernavn</label>
-                    <input type="text" id="signup-username" name="username" placeholder="Indtast brugernavn" required>
-
-                    <label for="signup-password">Adgangskode</label>
-                    <input type="password" id="signup-password" name="password" placeholder="Indtast adgangskode" required>
-
-                    <button type="submit">Opret bruger</button>
-                </form>
-            </div>
-        </div>
     </div>
 </main>
 
 <div class="footer">
     <p>Bilabonnement | Medarbejderportal | Kontakt os på support@bilabonnement.dk</p>
 </div>
+
 </body>
 </html>
