Tilføjelse af abonnementtyper

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -30,32 +30,32 @@
         <section class="dashboard">
             <div class="card">
                 <h3>Tilføj Bil</h3>
-                <a th:href="@{/addCars}" class="btn-link">Tilføj Bil</a>
+                <a th:href="@{/addCars}" class="btn-link">Tryk her</a>
             </div>
 
             <div class="card">
-                <h3>Levering Og Registrering</h3>
-                <a th:href="@{/registerAndDeliverCar}" class="btn-link">Lever Og Registrering</a>
+                <h3>Levering & Registrering</h3>
+                <a th:href="@{/registerAndDeliverCar}" class="btn-link">Tryk her</a>
             </div>
 
             <div class="card">
                 <h3>Udlejede Biler</h3>
-                <a th:href="@{/carOverview}" class="btn-link">Se Oversigt</a>
+                <a th:href="@{/carOverview}" class="btn-link">Tryk her</a>
             </div>
 
             <div class="card">
                 <h3>Skaderapport</h3>
-                <a th:href="@{/damageReport}" class="btn-link">Vis Skaderapporter</a>
+                <a th:href="@{/damageReport}" class="btn-link">Tryk her</a>
             </div>
 
             <div class="card">
-                <h3>KPI Og Statisiker</h3>
-                <a th:href="@{/statistics}" class="btn-link">KPI- og statistikker</a>
+                <h3>KPI- & Statisiker</h3>
+                <a th:href="@{/statistics}" class="btn-link">Tryk her</a>
             </div>
 
             <div class="card">
-                <h3>Søg Medarbejder</h3>
-                <a th:href="@{/employeeOverview}" class="btn-link">Søg medarbejder</a>
+                <h3>Se liste over medarbejdere</h3>
+                <a th:href="@{/employeeOverview}" class="btn-link">Tryk her</a>
             </div>
         </section>
     </main>
